[omnibox] Fix smart compose getting cut off in omnibox.
Similar CL was made here to fix this for the cobrowsing composebox
crrev.com/c/7829600. Min-height wasn't actually affecting the height
of the omnibox. It still grows which was the concern in this CL:
crrev.com/c/7634045 (where it was added).

Bug: 513616219
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7850716
Commit-Queue: Nihar Majmudar <niharm@google.com>
Cr-Commit-Position: refs/heads/main@{#1632242}

--- a/chrome/browser/resources/omnibox_popup/aim_app.css
+++ b/chrome/browser/resources/omnibox_popup/aim_app.css
@@ -144,10 +144,6 @@
   transition-duration: var(--on-press-duration);
 }
 
-#composebox::part(input) {
-  min-height: 44px;
-}
-
 #composebox::part(voice-stop-button) {
   background-color: var(--color-sys-neutral-container);
   --cr-icon-button-fill-color: var(--color-sys-on-surface);
